extract/src/main/java/es/uniovi/asw/parser/sintactico/sinj.y


%{
// * Declaraciones de código Java
// * Se sitúan al comienzo del archivo generado
// * El package lo añade yacc si utilizamos la opción -Jpackage
import lexico.Lexico;
import pregunta.Pregunta;
%}

// * Declaraciones Yacc
%token DOBLESPUNTOS
%token ID
%token FR

%%

programa: listapreguntas 
		; 

listapreguntas: pregunta | pregunta listapreguntas
		;
		
pregunta : DOBLESPUNTOS ID DOBLESPUNTOS FR '{' tiporespuesta FR tiporespuesta FR tiporespuesta FR tiporespuesta FR '}' 
{$$ = new Pregunta ((String)$2, (String)$4, (String) $7, (String) $9, (String) $11, (String) $13); }
		;

tiporespuesta: '~'
		| '='
		;



%%



// * Código Java
// * Se crea una clase "Parser", lo que aquí ubiquemos será:
//	- Atributos, si son variables
//	- Métodos, si son funciones
//   de la clase "Parser"

// * Estamos obligados a implementar:
//	int yylex()
//	void yyerror(String)

// * Referencia al analizador léxico
private Lexico lexico;

// * Llamada al analizador léxico
private int yylex () {
    int token=0;
    try { 
	token=lexico.yylex(); 
    } catch(Throwable e) {
	    System.err.println ("Error Léxico en línea " + lexico.getLinea()+
		" y columna "+lexico.getColumna()+":\n\t"+e); 
    }
    return token;
}



// * Manejo de Errores Sintácticos
public void yyerror (String error) {
    System.err.println ("Error Sintáctico en línea " + lexico.getLinea()+
		" y columna "+lexico.getColumna()+":\n\t"+error);
}

// * El yylval no es un atributo público
public Object getYylval() {
    	return yylval;
}
public void setYylval(Object yylval) {
        this.yylval = yylval;
}

// * Constructor del Sintáctico
public Parser(Lexico lexico) {
	this.lexico = lexico;
	lexico.setParser(this);
}
